Fixing width of nav search field on mobile

--- a/app/assets/stylesheets/_header.css.scss
+++ b/app/assets/stylesheets/_header.css.scss
@@ -34,7 +34,13 @@ header {
 }
 
 .nav-search {
-  width: 400px !important;
+  width: 100% !important;
+}
+
+@media(min-width:768px) {
+  .nav-search {
+    width: 400px !important;
+  }
 }
 
 #logo {
